BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -174,7 +174,7 @@
 }
 
 @misc{European_Commission_NIS2,
-  title = {Directive on Measures for a High Common Level of Cybersecurity across the {{Union}} ({{NIS2 Directive}}) | {{Shaping Europe}}'s Digital Future},
+  title = {Directive on Measures for a High Common Level of Cybersecurity across the {{Union}} ({{NIS2 Directive}})},
   author = {European Commission},
   year = {2023},
   month = apr,
