BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -175,7 +175,7 @@
 
 @misc{European_Commission_NIS2,
   title = {Directive on Measures for a High Common Level of Cybersecurity across the {{Union}} ({{NIS2 Directive}})},
-  author = {European Commission},
+  author = {\{European Commission\}},
   year = {2023},
   month = jan,
   url = {https://digital-strategy.ec.europa.eu/en/policies/nis2-directive},
