BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -146,6 +146,8 @@
 @misc{EU_DSGVO,
   title = {{{VERORDNUNG}} ({{EU}}) 2016/679 {{DES EUROP\"AISCHEN PARLAMENTS UND DES RATES}} Vom 27. {{April}} 2016 Zum {{Schutz}} Nat\"urlicher {{Personen}} Bei Der {{Verarbeitung}} Personenbezogener {{Daten}}, Zum Freien {{Datenverkehr}} Und Zur {{Aufhebung}} Der {{Richtlinie}} 95/46/{{EG}} ({{Datenschutz-Grundverordnung}})},
   author = {{European Parliament {and} the Council of the European Union}},
+  year = {2016},
+  month = apr,
   url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
   urldate = {2023-03-17},
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
