BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -166,7 +166,7 @@
 
 @misc{EU_RichtlinieEU20162016,
   title = {{Richtlinie (EU) 2016/1148 des Europ\"aischen Parlaments und des Rates vom 6. Juli 2016 \"uber Ma\ss nahmen zur Gew\"ahrleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union}},
-  author = {{European Parliament {and} the Council of the European Union}},
+  author = {{Europ{\"a}isches Parlament und der Rat}},
   year = {2016},
   month = jul,
   url = {http://data.europa.eu/eli/dir/2016/1148/oj/deu},
