BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -169,7 +169,7 @@
   author = {{Europ{\"a}isches Parlament und der Rat}},
   year = {2016},
   month = jul,
-  url = {http://data.europa.eu/eli/dir/2016/1148/oj/deu},
+  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016L1148-20160719},
   urldate = {2023-02-20},
   langid = {ngerman},
   file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
