BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -191,6 +191,7 @@
   author = {{Fluchs, Sarah und Rudolph}, Heiko},
   year = {2018},
   journal = {DACH Security 2018},
+  volume = {syssec (2018)},
   pages = {276--286}
 }
 
