BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -187,7 +187,7 @@
 }
 
 @article{Fluchsot,
-  title = {{{OT-Security}} von Der Norm Ins Leitsystem},
+  title = {{{OT-Security}} - {{Von}} Der {{Norm}} Ins {{Leitsystem}}},
   author = {{Fluchs, Sarah und Rudolph}, Heiko},
   year = {2018},
   journal = {DACH Security 2018},
