BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -423,6 +423,8 @@
   type = {{{MSM}}\_{{OES Tool}}},
   title = {Minimum {{Security Measures}} for {{Operators}} of {{Essentials Services}}},
   author = {{NIS Cooperation Group}},
+  year = {2023},
+  month = apr,
   journal = {ENISA},
   url = {https://www.enisa.europa.eu/topics/cybersecurity-policy/nis-directive-new/minimum-security-measures-for-operators-of-essentials-services},
   urldate = {2023-03-16},
