--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -411,7 +411,7 @@
 
 @misc{NIS_CooperationGroup_Security_Measures,
   title = {Reference Document on Security Measures for {{Operators}} of {{Essential Services}}},
-  author = {NIS Cooperation Group},
+  author = {{NIS Cooperation Group}},
   year = {2018},
   month = feb,
   url = {https://ec.europa.eu/information_society/newsroom/image/document/2018-30/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf},
