BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -235,13 +235,13 @@
 
 @misc{IEC_62443-2-1,
   title = {{{EN IEC}} 62443-2-1, {{Security}} for Industrial Automation and Control Systems - {{Part}} 2-1: {{Security}} Program Requirements for {{IACS}} Asset Owners ({{IEC}} 65/756/{{CDV}})},
-  author = {{IEC - International Electrotechnical Commission}},
+  author = {{International Electrotechnical Commission (IEC)}},
   year = {2019}
 }
 
 @misc{IEC_62443-3-3,
   title = {{{EN IEC}} 62443-3-3:2019 + {{AC}}:2019, Industrielle Kommunikationsnetze - {{IT-Sicherheit}} F\"ur Netze Und Systeme - Teil 3-3: {{Systemanforderungen}} Zur {{IT-Sicherheit}} Und Security-Level ({{IEC}} 52443-3-3:2013 + {{COR1}}:2014)},
-  author = {{IEC - International Electrotechnical Commission}},
+  author = {{International Electrotechnical Commission (IEC)}},
   year = {2020}
 }
 
