--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -28,7 +28,7 @@
 
 @misc{AustrianSI_OENORM7700-4,
   title = {{{\"ONORM A}} 7700-4:2019; {{Webapplikationen}}, {{Teil}} 4: {{Anforderungen}} an Den Sicheren {{Betrieb}}},
-  author = {Austrian Standards International},
+  author = {{Austrian Standards International}},
   year = {2019},
   month = oct,
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
