--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -253,11 +253,10 @@
   file = {/Users/werner/Zotero/storage/HXCY9CNQ/OENORM_EN_ISO_19011_2018_11_01.html}
 }
 
-@article{ISO24765_DSR_Systems_and_software_engineering,
+@misc{ISO24765_DSR_Systems_and_software_engineering,
   title = {{{ISO}}/{{IEC}}/{{IEEE International Standard}} - {{Systems}} and Software Engineering--{{Vocabulary}}},
   author = {{ISO - International Organization for Standardization}},
   year = {2017},
-  pages = {1--541},
   doi = {10.1109/IEEESTD.2017.8016712},
   url = {https://ieeexplore.ieee.org/document/8016712/},
   urldate = {2023-03-13},
