BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -324,8 +324,8 @@
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
 }
 
-@misc{jusline35DSGVODatenschutzGrundverordnung,
-  title = {{\textsection{} 35 DSGVO (Datenschutz-Grundverordnung) - JUSLINE \"Osterreich}},
+@misc{juslineArtikel35DSGVO,
+  title = {{Artikel 35 DSGVO (Datenschutz-Grundverordnung) - JUSLINE \"Osterreich}},
   author = {JUSLINE},
   url = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
   urldate = {2023-03-17},
