--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -324,9 +324,11 @@
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
 }
 
-@misc{juslineArtikel35DSGVO,
+@misc{juslineArtikel35DSGVO2017,
   title = {{Artikel 35 DSGVO (Datenschutz-Grundverordnung) - JUSLINE \"Osterreich}},
   author = {JUSLINE},
+  year = {2017},
+  month = aug,
   url = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
   urldate = {2023-03-17},
   abstract = {Artikel 35 Datenschutz-Folgenabsch\"atzung - Datenschutz-Grundverordnung - Gesetz, Kommentar und Diskussionsbeitr\"age - JUSLINE \"Osterreich},
