BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -219,6 +219,7 @@
   series = {Management {{Information Systems Quarterly}}},
   volume = {28},
   pages = {75--105},
+  url = {https://wise.vub.ac.be/sites/default/files/thesis_info/design_science.pdf},
   langid = {english},
   file = {/Users/werner/Zotero/storage/QGV9PY36/Hevner et al. - Design Science in Information Systems Research.pdf}
 }
