--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -220,6 +220,7 @@
   volume = {28},
   pages = {75--105},
   url = {https://wise.vub.ac.be/sites/default/files/thesis_info/design_science.pdf},
+  urldate = {2023-04-28},
   langid = {english},
   file = {/Users/werner/Zotero/storage/QGV9PY36/Hevner et al. - Design Science in Information Systems Research.pdf}
 }
