BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -191,7 +191,9 @@
   year = {2018},
   journal = {DACH Security 2018},
   volume = {syssec (2018)},
-  pages = {276--286}
+  pages = {276--286},
+  url = {https://www.syssec.at/de/veranstaltungen/dachsecurity2018/papers/DACH_Security_2018_Paper_22A3.pdf},
+  urldate = {2023-04-28}
 }
 
 @inproceedings{guoEnhanceEnterpriseSecurity2021,
