BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -391,7 +391,7 @@
 }
 
 @techreport{Niemann2021abgrenzung,
-  title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
+  title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: {{Eine Sicht}} Auf Automatisierungstechnische {{Anlagen}} Der {{Fertigungs-}} Und {{Prozessindustrie}}},
   author = {Niemann, Karl-Heinz},
   year = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
