BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -394,7 +394,9 @@
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: {{Eine Sicht}} Auf Automatisierungstechnische {{Anlagen}} Der {{Fertigungs-}} Und {{Prozessindustrie}}},
   author = {Niemann, Karl-Heinz},
   year = {2021},
-  institution = {{ABB Automation Products GmbH, Heidelberg}}
+  institution = {{ABB Automation Products GmbH, Heidelberg}},
+  url = {https://serwiss.bib.hs-hannover.de/frontdoor/deliver/index/docId/1973/file/Abgrenzung_ISO_27001_IEC_62443_V13.pdf},
+  urldate = {2023-04-28}
 }
 
 @misc{NIS_CooperationGroup_Security_Measures,
