--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -340,7 +340,7 @@
 
 @misc{KSOE,
   title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023 {{Version}} 3},
-  author = {Kompetenzzentrum Sicheres {\"O}sterreich and Cyber Trust Austria},
+  author = {{Kompetenzzentrum Sicheres \"Osterreich} and {Cyber Trust Austria}},
   year = {2023},
   url = {https://cyberrisk-rating.at/cyberrisk-2023-schema-de.pdf},
   file = {/Users/werner/Zotero/storage/HJ2EJ2WY/cyberrisk-2023-schema-de.pdf}
