BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -343,6 +343,7 @@
   author = {{Kompetenzzentrum Sicheres \"Osterreich} and {Cyber Trust Austria}},
   year = {2023},
   url = {https://cyberrisk-rating.at/cyberrisk-2023-schema-de.pdf},
+  urldate = {2023-04-28},
   file = {/Users/werner/Zotero/storage/HJ2EJ2WY/cyberrisk-2023-schema-de.pdf}
 }
 
