--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -425,13 +425,13 @@
 
 @misc{OVE_EN50600-1,
   title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
-  author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
 }
 
 @misc{OVE_EN50600-2-1,
   title = {{{EN}} 50600-2-1:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-1: {{Geb\"audekonstruktion}}},
-  author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   file = {/Users/werner/Zotero/storage/84XZGBY4/OVE_EN_50600-2-1_2021_10_01.html}
 }
 
