BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -437,13 +437,13 @@
 
 @misc{OVE_EN50600-2-2,
   title = {{{EN}} 50600-2-2:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-2: {{Stromversorgung}} Und {{Stromverteilung}}},
-  author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
 }
 
 @misc{OVE_EN50600-2-3,
   title = {{{EN}} 50600-2-3:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-3: {{Regelung}} Der {{Umgebungsbedingungen}}},
-  author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   file = {/Users/werner/Zotero/storage/EAD2DP3A/OVE_EN_50600-2-3_2019_09_01.html}
 }
 
