BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -449,13 +449,13 @@
 
 @misc{OVE_EN50600-2-4,
   title = {{{EN}} 50600-2-4:2015; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-4: {{Infrastruktur}} Der {{Telekommunikationsverkabelung}}},
-  author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
 }
 
 @misc{OVE_EN50600-2-5,
   title = {{{EN}} 50600-2-5:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-5: {{Sicherungssysteme}}},
-  author = {{OVE {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
   file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
 }
 
