--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -440,6 +440,7 @@
 @misc{OVE_EN50600-2-2,
   title = {{{EN}} 50600-2-2:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-2: {{Stromversorgung}} Und {{Stromverteilung}}},
   author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  year = {2019},
   file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
 }
 
