BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -447,12 +447,14 @@
 @misc{OVE_EN50600-2-3,
   title = {{{EN}} 50600-2-3:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-3: {{Regelung}} Der {{Umgebungsbedingungen}}},
   author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  year = {2019},
   file = {/Users/werner/Zotero/storage/EAD2DP3A/OVE_EN_50600-2-3_2019_09_01.html}
 }
 
 @misc{OVE_EN50600-2-4,
   title = {{{EN}} 50600-2-4:2015; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-4: {{Infrastruktur}} Der {{Telekommunikationsverkabelung}}},
   author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  year = {2015},
   file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
 }
 
