--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -461,6 +461,7 @@
 @misc{OVE_EN50600-2-5,
   title = {{{EN}} 50600-2-5:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-5: {{Sicherungssysteme}}},
   author = {{OVE - {\"O}sterreichischer Verband f{\"u}r Elektortechnik}},
+  year = {2021},
   file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
 }
 
