BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -472,7 +472,9 @@
   month = jan,
   journal = {Journal of Management Information Systems},
   volume = {24},
-  pages = {45--77}
+  pages = {45--77},
+  url = {https://www.researchgate.net/profile/Tuure-Tuunanen/publication/284503626_A_design_science_research_methodology_for_information_systems_research/links/616fed20766c4a211cfb5b47/A-design-science-research-methodology-for-information-systems-research.pdf},
+  urldate = {2023-04-28}
 }
 
 @article{prat_DSR_TaxonomyEvaluationMethods2015,
