BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -618,5 +618,7 @@
 @techreport{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden F\"ur Hersteller Zur {{IEC}} 62443},
   author = {{ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V.}, Fachverband Automation},
-  year = {2017}
+  year = {2017},
+  url = {https://www.zvei.org/fileadmin/user_upload/Presse_und_Medien/Publikationen/2017/April/Orientierungsleitfaden_fuer_Hersteller_IEC_62443/Orientierungsleitfaden_fuer_Hersteller_IEC_62443.pdf},
+  urldate = {2023-04-28}
 }
