BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -615,7 +615,7 @@
   type = {Incollection}
 }
 
-@techreport{ZVEI_Orientierungsleitfaden_IEC_62443,
+@misc{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden F\"ur Hersteller Zur {{IEC}} 62443},
   author = {{ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V.}, Fachverband Automation},
   year = {2017},
