BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -218,7 +218,7 @@
   author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
   year = {2004},
   series = {Management {{Information Systems Quarterly}}},
-  volume = {28},
+  volume = {28 No.1},
   pages = {75--105},
   url = {https://wise.vub.ac.be/sites/default/files/thesis_info/design_science.pdf},
   urldate = {2023-04-28},
