--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -217,6 +217,7 @@
   title = {Design {{Science}} in {{Information Systems Research}}},
   author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
   year = {2004},
+  month = mar,
   series = {Management {{Information Systems Quarterly}}},
   volume = {28 No.1},
   pages = {75--105},
