BibTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -218,6 +218,7 @@
   author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
   year = {2004},
   month = mar,
+  journal = {MIS Quarterly},
   series = {Management {{Information Systems Quarterly}}},
   volume = {28 No.1},
   pages = {75--105},
